added 01-intro assignment

--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-06-10 14:52:14--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/refs/heads/main/minsearch.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+      "--2025-06-11 07:28:08--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/refs/heads/main/minsearch.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.108.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 4073 (4.0K) [text/plain]\n",
-      "Saving to: ‘minsearch.py.7’\n",
+      "Saving to: ‘minsearch.py.2’\n",
       "\n",
-      "minsearch.py.7      100%[===================>]   3.98K  --.-KB/s    in 0s      \n",
+      "minsearch.py.2      100%[===================>]   3.98K  --.-KB/s    in 0s      \n",
       "\n",
-      "2025-06-10 14:52:14 (51.0 MB/s) - ‘minsearch.py.7’ saved [4073/4073]\n",
+      "2025-06-11 07:28:08 (55.3 MB/s) - ‘minsearch.py.2’ saved [4073/4073]\n",
       "\n"
      ]
     }
@@ -3512,7 +3512,7 @@
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x7940207592e0>"
+       "<minsearch.Index at 0x78e4d0892750>"
       ]
      },
      "execution_count": 9,
@@ -3808,8 +3808,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, you can. Even though you missed the start date, you can register for the course. You won’t be able to submit some of the homeworks, but you can still take part in the course. In order to get a certificate, you need to submit 2 out of 3 course projects an Projects by the deadlind review 3 peers’e. It means that if you join the course at the end of November and manage to work on two projects, you will still be eligible for a certificate.\n",
-      "Also, even if you don't register, you're still eligible to submit the homework. Be aware, however, that there will be deadlines for turning in homeworks and the final projects.\n"
+      "Yes, you can. Even though you missed the start date, you can register for the course. You won’t be able to submit some of the homeworks, but you can still take part in the course.\n",
+      "In order to get a certificate, you need to submit 2 out of 3 course projects and review 3 peers’ projects by the deadline. It means that if you join the course at the end of November and manage to work on two projects, you will still be eligible for a certificate.\n",
+      "Even if you don't register, you're still eligible to submit the homework.\n",
+      "Be aware, however, that there will be deadlines for turning in homeworks and the final projects. So don't leave everything for the last minute.\n"
      ]
     }
    ],
@@ -3919,25 +3921,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are a few different ways to run Kafka depending on the context:\n",
+      "There are a few different ways to run kafka, depending on the context:\n",
       "\n",
-      "1.  **For running Python files with Kafka:**\n",
+      "1.  **Running Kafka with Java:**\n",
       "\n",
-      "    *   Create a virtual environment.\n",
-      "    *   Activate the virtual environment.\n",
-      "    *   Install the required packages from `requirements.txt` using `pip install -r ../requirements.txt`.\n",
-      "    *   Remember to activate the virtual environment every time you need it.\n",
-      "    *   If you encounter `ModuleNotFoundError: No module named 'kafka.vendor.six.moves'`, use `pip install kafka-python-ng` instead of `pip install kafka-python`.\n",
-      "    *   Make sure your Docker images are up and running before running the Python file.\n",
+      "    *   In the project directory, run: `java -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java`\n",
       "\n",
-      "2.  **For running Java Kafka producer/consumer/kstreams:**\n",
+      "2.  **Running Kafka with Python:**\n",
       "\n",
-      "    *   Navigate to the project directory in your terminal.\n",
-      "    *   Run the command: `java -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java` (replace `<jar_name>` with the actual name of your JAR file).\n",
-      "\n",
-      "3.  **If you encounter a \"Permission denied\" error when running `build.sh` (likely in the `/docker/spark` directory):**\n",
-      "\n",
-      "    *   Run the command `chmod +x build.sh` in the terminal within that directory to make the script executable.\n"
+      "    *   First, create a virtual environment:\n",
+      "        ```\n",
+      "        python -m venv env\n",
+      "        source env/bin/activate\n",
+      "        pip install -r ../requirements.txt\n",
+      "        ```\n",
+      "    *   Then, activate the virtual environment: `source env/bin/activate` (use `env/Scripts/activate` on Windows).\n",
+      "    *   Finally, run the Python files within this activated environment.\n"
      ]
     }
    ],
@@ -3956,7 +3955,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, you can register for the course even if you missed the start date. However, you won’t be able to submit some of the homeworks, but you can still take part in the course.\n"
+      "Yes, you can. You can register for the course even if you missed the start date. You won’t be able to submit some of the homeworks, but you can still take part in the course.\n"
      ]
     }
    ],
@@ -4011,7 +4010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "e69cbeea-780d-4d96-b3a1-ac69b1d202bc",
    "metadata": {},
    "outputs": [
@@ -4019,7 +4018,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_60352/3063852820.py:20: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_8313/3063852820.py:20: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  es_client.indices.create(index=index_name, body=index_settings)\n"
      ]
     },
@@ -4029,7 +4028,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4067,17 +4066,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "0e6b3d65-41e5-485f-b904-8f8a1fb38ec3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm.auto import tqdm "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "89d67d89-de89-4723-9c93-f047ac86e399",
    "metadata": {},
    "outputs": [
@@ -4085,7 +4093,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1120/1120 [00:03<00:00, 337.44it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1120/1120 [00:05<00:00, 191.66it/s]\n"
      ]
     }
    ],
@@ -4104,7 +4112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "99b80f9c-af73-4fed-ae00-7519188b63bc",
    "metadata": {},
    "outputs": [
@@ -4117,7 +4125,7 @@
        " 'course': 'data-engineering-zoomcamp'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4128,7 +4136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "5d0b5f54-1b75-4cdc-8cc0-6bdbbd858301",
    "metadata": {},
    "outputs": [
@@ -4138,7 +4146,7 @@
        "'the course started already. can i still enroll?'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4149,7 +4157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "56592efd-8937-4884-81b4-83b49cf26593",
    "metadata": {},
    "outputs": [
@@ -4157,7 +4165,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_60352/1449106185.py:21: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_8313/1449106185.py:21: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  search_response = es_client.search(index=index_name, body=search_query)\n"
      ]
     }
@@ -4188,7 +4196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "1cb7d334-7abb-4d77-9208-694036b5e863",
    "metadata": {},
    "outputs": [],
@@ -4209,7 +4217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "c321f1c5-1697-4ba4-8898-569260b0b5be",
    "metadata": {},
    "outputs": [],
@@ -4247,7 +4255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "676bbb65-d21a-4872-913c-f78993b394ea",
    "metadata": {},
    "outputs": [],
@@ -4262,7 +4270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "c8180cad-e103-4b22-99ca-210d1d2c6d84",
    "metadata": {},
    "outputs": [
@@ -4272,7 +4280,7 @@
        "'the course started already. can i still enroll?'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4283,7 +4291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "id": "cc9992d2-6eab-459e-9811-ad2234aa2de6",
    "metadata": {},
    "outputs": [
@@ -4291,17 +4299,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_60352/15812511.py:22: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_8313/15812511.py:22: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  search_response = es_client.search(index=index_name, body=search_query)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Yes, you can still join the course even after the start date. You can also start learning and submitting homework without registering.'"
+       "\"Yes, even if you don't register, you're still eligible to submit the homework.\""
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4312,30 +4320,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "077a7f8b-27fb-48a4-9d28-04356bae4e8c",
+   "execution_count": 47,
+   "id": "1780a4a0-c66b-433a-ae18-90924e3aabbb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, you can still register for the course even if you missed the start date.\n"
+      "Yes, you can still register for the course even though you missed the start date. You won’t be able to submit some of the homeworks, but you can still take part in the course.\n"
      ]
     }
    ],
    "source": [
     "rag(q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e57b95f9-4759-4a8d-8f8f-f6459e1cf5ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "es_client.indices.delete(index=index_name)"
    ]
   }
  ],
