--- a/01-intro/real homework.ipynb
+++ b/01-intro/real homework.ipynb
@@ -127,7 +127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_48606/4073002207.py:18: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_22576/4073002207.py:18: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  es_client.indices.create(index=index_name, body=index_settings)\n"
      ]
     },
@@ -200,7 +200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 948/948 [00:03<00:00, 303.31it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 948/948 [00:02<00:00, 351.72it/s]\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_48606/1991316880.py:16: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_22576/1991316880.py:16: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  search_response = es_client.search(index=index_name, body=search_query)\n"
      ]
     }
@@ -270,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "44.06996"
+       "43.681316"
       ]
      },
      "execution_count": 11,
@@ -310,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_48606/2547665400.py:21: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_22576/2547665400.py:21: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  search_response = es_client.search(index=index_name, body=search_query)\n"
      ]
     }
@@ -361,7 +361,7 @@
     {
      "data": {
       "text/plain": [
-       "'How do I copy files from a different folder into docker container’s working directory?'"
+       "'How to run a script while a web-server is working?'"
       ]
      },
      "execution_count": 15,
@@ -482,10 +482,6 @@
       "docker exec -it <container-id> bash\n",
       "(Marcos MJD)\n",
       "\n",
-      "Q: Kubernetes-dashboard\n",
-      "A: Deploy and Access the Kubernetes Dashboard\n",
-      "Luke\n",
-      "\n",
       "Q: How do I copy files from a different folder into docker container’s working directory?\n",
       "A: You can copy files from your local machine into a Docker container using the docker cp command. Here's how to do it:\n",
       "In the Dockerfile, you can provide the folder containing the files that you want to copy over. The basic syntax is as follows:\n",
@@ -507,6 +503,15 @@
       "arrowprops=dict(facecolor='black', shrink=0.05))\n",
       "Quinn Avila\n",
       "\n",
+      "Q: How to output only a certain number of decimal places\n",
+      "A: You can use round() function or f-strings\n",
+      "round(number, 4)  - this will round number up to 4 decimal places\n",
+      "print(f'Average mark for the Homework is {avg:.3f}') - using F string\n",
+      "Also there is pandas.Series. round idf you need to round values in the whole Series\n",
+      "Please check the documentation\n",
+      "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.round.html#pandas.Series.round\n",
+      "Added by Olga Rudakova\n",
+      "\n",
       "\n"
      ]
     }
@@ -524,7 +529,7 @@
     {
      "data": {
       "text/plain": [
-       "1919"
+       "2324"
       ]
      },
      "execution_count": 22,
@@ -538,15 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d351dc6e-07e3-4c13-aa4d-d4ea87f73026",
-   "metadata": {},
-   "source": [
-    "### Q6. Tokens - For OpenAI API question only, I used Gemini :<"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1633caef-1975-476d-8831-3dd925e05f67",
+   "id": "71c13a91-5553-485e-8269-8d2a535bfa6f",
    "metadata": {},
    "source": [
     "### Bonus: Gemini Answer"
@@ -606,7 +603,7 @@
     {
      "data": {
       "text/plain": [
-       "'You can copy files from your local machine into a Docker container using the `docker cp` command. In the Dockerfile, you can provide the folder containing the files that you want to copy over, using the syntax: `COPY [\"src/predict.py\", \"models/xgb_model.bin\", \"./\"]`.\\n'"
+       "'You can copy files from your local machine into a Docker container using the docker cp command. In the Dockerfile, you can provide the folder containing the files that you want to copy over using the following syntax: `COPY [\"src/predict.py\", \"models/xgb_model.bin\", \"./\"]`\\n'"
       ]
      },
      "execution_count": 27,
@@ -616,6 +613,107 @@
    ],
    "source": [
     "answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d351dc6e-07e3-4c13-aa4d-d4ea87f73026",
+   "metadata": {},
+   "source": [
+    "### Q6. Tokens - For OpenAI API question only, I used Gemini :<"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "61e49e14-f131-4674-bbc0-304af0d665b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GenerateContentResponse(candidates=[Candidate(content=Content(parts=[Part(video_metadata=None, thought=None, inline_data=None, file_data=None, thought_signature=None, code_execution_result=None, executable_code=None, function_call=None, function_response=None, text='You can copy files from your local machine into a Docker container using the docker cp command. In the Dockerfile, you can provide the folder containing the files that you want to copy over using the following syntax: `COPY [\"src/predict.py\", \"models/xgb_model.bin\", \"./\"]`\\n')], role='model'), citation_metadata=CitationMetadata(citations=[Citation(end_index=189, license=None, publication_date=None, start_index=50, title=None, uri='https://github.com/rag-lab/LLMzoomcamp')]), finish_message=None, token_count=None, finish_reason=<FinishReason.STOP: 'STOP'>, url_context_metadata=None, avg_logprobs=-0.048577411358173075, grounding_metadata=None, index=None, logprobs_result=None, safety_ratings=None)], create_time=None, response_id=None, model_version='gemini-2.0-flash', prompt_feedback=None, usage_metadata=GenerateContentResponseUsageMetadata(cache_tokens_details=None, cached_content_token_count=None, candidates_token_count=65, candidates_tokens_details=[ModalityTokenCount(modality=<MediaModality.TEXT: 'TEXT'>, token_count=65)], prompt_token_count=611, prompt_tokens_details=[ModalityTokenCount(modality=<MediaModality.TEXT: 'TEXT'>, token_count=611)], thoughts_token_count=None, tool_use_prompt_token_count=None, tool_use_prompt_tokens_details=None, total_token_count=676, traffic_type=None), automatic_function_calling_history=[], parsed=None)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "695687b5-b7cf-4cd4-a221-e0ff593600bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt tokens: 611\n",
+      "Candidate (output) tokens: 65\n",
+      "Total tokens used: 676\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Prompt tokens: {response.usage_metadata.prompt_token_count}\")\n",
+    "print(f\"Candidate (output) tokens: {response.usage_metadata.candidates_token_count}\")\n",
+    "print(f\"Total tokens used: {response.usage_metadata.total_token_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "340cf0b2-ec98-45cd-9d09-08a830a6ea21",
+   "metadata": {},
+   "source": [
+    "### Bonus: API call cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ae284b8c-b3d9-4a79-a66b-47549d81aeb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_token = 150\n",
+    "output_token = 250"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c716df93-0f7c-46f1-84f1-2870e37c4c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_call_cost = 0.005 / 1000\n",
+    "output_call_cost = 0.015 / 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a051b371-e7a1-4b31-b915-3569ed557b70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input cost: $0.00075\n",
+      "Output cost: $0.00375\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Input cost: $\" + str(input_token * input_call_cost))\n",
+    "print(\"Output cost: $\" + str(output_token * output_call_cost))"
    ]
   }
  ],
