--- a/01-intro/real homework.ipynb
+++ b/01-intro/real homework.ipynb
@@ -127,7 +127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22576/4073002207.py:18: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_5554/4073002207.py:18: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  es_client.indices.create(index=index_name, body=index_settings)\n"
      ]
     },
@@ -200,7 +200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 948/948 [00:02<00:00, 351.72it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████| 948/948 [00:04<00:00, 194.60it/s]\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22576/1991316880.py:16: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_5554/1991316880.py:16: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  search_response = es_client.search(index=index_name, body=search_query)\n"
      ]
     }
@@ -270,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "43.681316"
+       "42.94069"
       ]
      },
      "execution_count": 11,
@@ -310,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22576/2547665400.py:21: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_5554/2547665400.py:21: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  search_response = es_client.search(index=index_name, body=search_query)\n"
      ]
     }
@@ -361,7 +361,7 @@
     {
      "data": {
       "text/plain": [
-       "'How to run a script while a web-server is working?'"
+       "'How do I copy files from a different folder into docker container’s working directory?'"
       ]
      },
      "execution_count": 15,
@@ -482,6 +482,10 @@
       "docker exec -it <container-id> bash\n",
       "(Marcos MJD)\n",
       "\n",
+      "Q: Kubernetes-dashboard\n",
+      "A: Deploy and Access the Kubernetes Dashboard\n",
+      "Luke\n",
+      "\n",
       "Q: How do I copy files from a different folder into docker container’s working directory?\n",
       "A: You can copy files from your local machine into a Docker container using the docker cp command. Here's how to do it:\n",
       "In the Dockerfile, you can provide the folder containing the files that you want to copy over. The basic syntax is as follows:\n",
@@ -503,15 +507,6 @@
       "arrowprops=dict(facecolor='black', shrink=0.05))\n",
       "Quinn Avila\n",
       "\n",
-      "Q: How to output only a certain number of decimal places\n",
-      "A: You can use round() function or f-strings\n",
-      "round(number, 4)  - this will round number up to 4 decimal places\n",
-      "print(f'Average mark for the Homework is {avg:.3f}') - using F string\n",
-      "Also there is pandas.Series. round idf you need to round values in the whole Series\n",
-      "Please check the documentation\n",
-      "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.round.html#pandas.Series.round\n",
-      "Added by Olga Rudakova\n",
-      "\n",
       "\n"
      ]
     }
@@ -529,7 +524,7 @@
     {
      "data": {
       "text/plain": [
-       "2324"
+       "1919"
       ]
      },
      "execution_count": 22,
@@ -603,7 +598,7 @@
     {
      "data": {
       "text/plain": [
-       "'You can copy files from your local machine into a Docker container using the docker cp command. In the Dockerfile, you can provide the folder containing the files that you want to copy over using the following syntax: `COPY [\"src/predict.py\", \"models/xgb_model.bin\", \"./\"]`\\n'"
+       "'You can copy files from your local machine into a Docker container using the `docker cp` command. In the Dockerfile, you can provide the folder containing the files that you want to copy over using the `COPY` command. The basic syntax is `COPY [\"src/predict.py\", \"models/xgb_model.bin\", \"./\"]`.\\n'"
       ]
      },
      "execution_count": 27,
@@ -632,7 +627,7 @@
     {
      "data": {
       "text/plain": [
-       "GenerateContentResponse(candidates=[Candidate(content=Content(parts=[Part(video_metadata=None, thought=None, inline_data=None, file_data=None, thought_signature=None, code_execution_result=None, executable_code=None, function_call=None, function_response=None, text='You can copy files from your local machine into a Docker container using the docker cp command. In the Dockerfile, you can provide the folder containing the files that you want to copy over using the following syntax: `COPY [\"src/predict.py\", \"models/xgb_model.bin\", \"./\"]`\\n')], role='model'), citation_metadata=CitationMetadata(citations=[Citation(end_index=189, license=None, publication_date=None, start_index=50, title=None, uri='https://github.com/rag-lab/LLMzoomcamp')]), finish_message=None, token_count=None, finish_reason=<FinishReason.STOP: 'STOP'>, url_context_metadata=None, avg_logprobs=-0.048577411358173075, grounding_metadata=None, index=None, logprobs_result=None, safety_ratings=None)], create_time=None, response_id=None, model_version='gemini-2.0-flash', prompt_feedback=None, usage_metadata=GenerateContentResponseUsageMetadata(cache_tokens_details=None, cached_content_token_count=None, candidates_token_count=65, candidates_tokens_details=[ModalityTokenCount(modality=<MediaModality.TEXT: 'TEXT'>, token_count=65)], prompt_token_count=611, prompt_tokens_details=[ModalityTokenCount(modality=<MediaModality.TEXT: 'TEXT'>, token_count=611)], thoughts_token_count=None, tool_use_prompt_token_count=None, tool_use_prompt_tokens_details=None, total_token_count=676, traffic_type=None), automatic_function_calling_history=[], parsed=None)"
+       "GenerateContentResponse(candidates=[Candidate(content=Content(parts=[Part(video_metadata=None, thought=None, inline_data=None, file_data=None, thought_signature=None, code_execution_result=None, executable_code=None, function_call=None, function_response=None, text='You can copy files from your local machine into a Docker container using the `docker cp` command. In the Dockerfile, you can provide the folder containing the files that you want to copy over using the `COPY` command. The basic syntax is `COPY [\"src/predict.py\", \"models/xgb_model.bin\", \"./\"]`.\\n')], role='model'), citation_metadata=CitationMetadata(citations=[Citation(end_index=191, license=None, publication_date=None, start_index=50, title=None, uri='https://github.com/rag-lab/LLMzoomcamp')]), finish_message=None, token_count=None, finish_reason=<FinishReason.STOP: 'STOP'>, url_context_metadata=None, avg_logprobs=-0.01877375988111104, grounding_metadata=None, index=None, logprobs_result=None, safety_ratings=None)], create_time=None, response_id=None, model_version='gemini-2.0-flash', prompt_feedback=None, usage_metadata=GenerateContentResponseUsageMetadata(cache_tokens_details=None, cached_content_token_count=None, candidates_token_count=73, candidates_tokens_details=[ModalityTokenCount(modality=<MediaModality.TEXT: 'TEXT'>, token_count=73)], prompt_token_count=497, prompt_tokens_details=[ModalityTokenCount(modality=<MediaModality.TEXT: 'TEXT'>, token_count=497)], thoughts_token_count=None, tool_use_prompt_token_count=None, tool_use_prompt_tokens_details=None, total_token_count=570, traffic_type=None), automatic_function_calling_history=[], parsed=None)"
       ]
      },
      "execution_count": 28,
@@ -654,9 +649,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prompt tokens: 611\n",
-      "Candidate (output) tokens: 65\n",
-      "Total tokens used: 676\n"
+      "Prompt tokens: 497\n",
+      "Candidate (output) tokens: 73\n",
+      "Total tokens used: 570\n"
      ]
     }
    ],
