--- a/02-vector-search/notes.ipynb
+++ b/02-vector-search/notes.ipynb
@@ -3042,8 +3042,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "528c1234-e98c-465d-a6c3-2b6e01746a72",
+   "execution_count": 9,
+   "id": "4fcdb6ee-cb81-44bf-b47d-15bd79898933",
    "metadata": {},
    "outputs": [
     {
@@ -3052,7 +3052,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3081,7 +3081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "273d206e-00fe-4371-a778-b50cb9fff07d",
    "metadata": {},
    "outputs": [
@@ -4396,7 +4396,7 @@
        "   'question': 'Basic Commands'}]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4415,7 +4415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "420c289c-85eb-443a-89f4-37952eb404fe",
    "metadata": {},
    "outputs": [],
@@ -4438,17 +4438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "c06d4658-2618-448c-bb8a-e7e0651fcd82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult(operation_id=1, status=<UpdateStatus.COMPLETED: 'completed'>)"
+       "UpdateResult(operation_id=0, status=<UpdateStatus.COMPLETED: 'completed'>)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4461,12 +4461,329 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "592e1fc5-d047-4c4c-bd02-3ded929b8d88",
+   "metadata": {},
+   "source": [
+    "### Step 6: Running a Similarity Search"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "717321db-4405-429b-a297-3b992944e4ca",
+   "execution_count": 13,
+   "id": "0780f151-ee3b-4265-b60b-1f2b385a0482",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def search(query, limit=1):\n",
+    "    results = qd_client.query_points(\n",
+    "        collection_name=collection_name,\n",
+    "        query=models.Document(\n",
+    "            text=query,\n",
+    "            model=model_handle\n",
+    "        ),\n",
+    "        limit=limit,\n",
+    "    )\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "268cef4b-6e25-4bb9-a8e2-f54c6600ac27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "random_course = random.choice(docs_raw)\n",
+    "random_doc = random.choice(random_course['documents'])\n",
+    "random_question = random_doc['question']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d3e925c0-ea64-49e9-a159-23d387ede3da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Where is the FAQ for Prefect questions?'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_question"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2f67edb1-f496-4f47-a7f2-6bbd925a4e71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': 'Here',\n",
+       " 'section': 'Module 4: Deployment',\n",
+       " 'question': 'Where is the FAQ for Prefect questions?',\n",
+       " 'course': 'mlops-zoomcamp'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_doc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1552d475-4388-4d79-ae16-a9bba42ef39c",
+   "metadata": {},
+   "source": [
+    "#### Retrieved Answer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "cd6366a6-d5de-42cf-8bd7-f72a9d411eaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ScoredPoint(id=17, version=0, score=0.81331164, payload={'text': 'After you submit your homework it will be graded based on the amount of questions in a particular homework. You can see how many points you have right on the page of the homework up top. Additionally in the leaderboard you will find the sum of all points you’ve earned - points for Homeworks, FAQs and Learning in Public. If homework is clear, others work as follows: if you submit something to FAQ, you get one point, for each learning in a public link you get one point.\\n(https://datatalks-club.slack.com/archives/C01FABYF2RG/p1706846846359379?thread_ts=1706825019.546229&cid=C01FABYF2RG)', 'section': 'General course-related questions', 'question': 'Homework and Leaderboard - what is the system for points in the course management platform?', 'course': 'data-engineering-zoomcamp'}, vector=None, shard_key=None, order_value=None),\n",
+       " ScoredPoint(id=253, version=0, score=0.7967107, payload={'text': 'One common cause experienced is lack of space after running prefect several times. When running prefect, check the folder ‘.prefect/storage’ and delete the logs now and then to avoid the problem.', 'section': 'Module 4: analytics engineering with dbt', 'question': 'GCP VM - All of sudden ssh stopped working for my VM after my last restart', 'course': 'data-engineering-zoomcamp'}, vector=None, shard_key=None, order_value=None),\n",
+       " ScoredPoint(id=8, version=0, score=0.79464304, payload={'text': 'Yes, the slack channel remains open and you can ask questions there. But always sDocker containers exit code w search the channel first and second, check the FAQ (this document), most likely all your questions are already answered here.\\nYou can also tag the bot @ZoomcampQABot to help you conduct the search, but don’t rely on its answers 100%, it is pretty good though.', 'section': 'General course-related questions', 'question': 'Course - Can I get support if I take the course in the self-paced mode?', 'course': 'data-engineering-zoomcamp'}, vector=None, shard_key=None, order_value=None)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search(random_question, 3).points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6c1afcb-7986-4aec-92bb-bb19cd2625d0",
+   "metadata": {},
+   "source": [
+    "#### Comparing to original answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3eb149d0-31ac-4941-87fe-e3cf675bf057",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Here'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_doc['text']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6abb812-5371-4640-b12c-298095e3c55a",
+   "metadata": {},
+   "source": [
+    "##### The answers in the dataset can be improved. Also, I think there is a better way to perform similarity search than using answer-question pairs, perhaps question-question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d35d87cb-ede7-4a7b-925a-2735d685ddee",
+   "metadata": {},
+   "source": [
+    "#### What if we search a query that is not in the dataset?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "774cc306-eb11-4a5b-8c8f-fc53602c2587",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"If you uploaded manually the fvh 2019 csv files, you may face errors regarding date types. Try to create an the external table in bigquery but define the pickup_datetime and dropoff_datetime to be strings\\nCREATE OR REPLACE EXTERNAL TABLE `gcp_project.trips_data_all.fhv_tripdata`  (\\ndispatching_base_num STRING,\\npickup_datetime STRING,\\ndropoff_datetime STRING,\\nPUlocationID STRING,\\nDOlocationID STRING,\\nSR_Flag STRING,\\nAffiliated_base_number STRING\\n)\\nOPTIONS (\\nformat = 'csv',\\nuris = ['gs://bucket/*.csv']\\n);\\nThen when creating the fhv core model in dbt, use TIMESTAMP(CAST(()) to ensure it first parses as a string and then convert it to timestamp.\\nwith fhv_tripdata as (\\nselect * from {{ ref('stg_fhv_tripdata') }}\\n),\\ndim_zones as (\\nselect * from {{ ref('dim_zones') }}\\nwhere borough != 'Unknown'\\n)\\nselect fhv_tripdata.dispatching_base_num,\\nTIMESTAMP(CAST(fhv_tripdata.pickup_datetime AS STRING)) AS pickup_datetime,\\nTIMESTAMP(CAST(fhv_tripdata.dropoff_datetime AS STRING)) AS dropoff_datetime,\""
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search(query=\"minji kim is so beautiful, what are chances that I can take her out on a date?\").points[0].payload['text']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa553b3b-59d8-479a-b09c-7756583b0225",
+   "metadata": {},
+   "source": [
+    "The chances are not looking good guys :<"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6726574-b436-49b7-8123-c62f3de3c691",
+   "metadata": {},
+   "source": [
+    "### Step 7: Use Filter Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de5499df-e8bc-4cf1-9c07-a3627dfedae7",
+   "metadata": {},
+   "source": [
+    "We can use filtering using the payload (metadata) that we defined in the points."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5155dd86-7d1e-40be-a693-9fa9abfcad53",
+   "metadata": {},
+   "source": [
+    "To enable fast filtering, we have to index the payload field of interest, the Course in this case.\n",
+    "Without payload indexing, the algorithm will search through the points one by one, very inefficient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0bccae62-8c43-4902-8388-a0096cb2d466",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult(operation_id=2, status=<UpdateStatus.COMPLETED: 'completed'>)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qd_client.create_payload_index(\n",
+    "    collection_name=collection_name, \n",
+    "    field_name=\"course\",\n",
+    "    field_schema=\"keyword\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "61d8f1ba-6bc1-4b34-9b43-7794bdf0249a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_in_course(query, course, limit=1):\n",
+    "    results = qd_client.query_points(\n",
+    "        collection_name=collection_name,\n",
+    "        query=models.Document(\n",
+    "            text=query,\n",
+    "            model=model_handle\n",
+    "        ),\n",
+    "        query_filter=models.Filter(\n",
+    "            must=[\n",
+    "                models.FieldCondition(\n",
+    "                    key=\"course\",\n",
+    "                    match=models.MatchValue(value=course)\n",
+    "                )\n",
+    "            ]\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "57b2f6f4-9029-4da9-a438-2e26029d9a31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please choose the closest one to your answer. Also do not post your answer in the course slack channel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(search_in_course(\"What if I submit homeworks late?\", \"mlops-zoomcamp\").points[0].payload['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b56c008c-2ad1-4084-b254-560887efaa4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No, late submissions are not allowed. But if the form is still not closed and it’s after the due date, you can still submit the homework. confirm your submission by the date-timestamp on the Course page.y\n",
+      "Older news:[source1] [source2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(search_in_course(\"What if I submit homeworks late?\", \"data-engineering-zoomcamp\").points[0].payload['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "75cdce65-f7d8-478d-a402-05bd20a98e0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Depends on whether the form will still be open. If you're lucky and it's open, you can submit your homework and it will be evaluated. if closed - it's too late.\n",
+      "(Added by Rileen Sinha, based on answer by Alexey on Slack)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(search_in_course(\"What if I submit homeworks late?\", \"machine-learning-zoomcamp\").points[0].payload['text'])"
+   ]
   }
  ],
  "metadata": {
